--- a/css/common_layout.css
+++ b/css/common_layout.css
@@ -38,6 +38,7 @@ body {
 	height:36px;
 	overflow:hidden;
 	font-size:13px;
+	word-wrap: break-word;
 }
 
 .no_data{
@@ -73,4 +74,24 @@ a.item{
 	.ui-header .ui-title, .ui-footer .ui-title{
 		margin: 0 22%;
 	}
+}
+
+/* loader setting */
+.ui-loader-default{
+	background: none repeat scroll 0 0 #000000;
+    height: 100%;
+    left: 0;
+    opacity: 0.4;
+    position: fixed;
+    top: 0 !important;
+    width: 100%;
+	margin:0px !important;
+}
+
+
+.ui-loader .ui-icon-loading {
+    position:absolute;
+	top:50%;
+	left:50%;
+	margin:-23px 0 0 -23px;
 }
